Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5854

DLC: lnetctl import failed as Failed to handle token:2 [state=0, rc=-1]

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.7.0
    • Lustre 2.7.0
    • None
    • 3
    • 16390

      the lnetctl import failed to import an yaml file; also the /etc/rc.d/init.d/lnet failed load the configuration yaml file under /etc/sysconfig/network-scripts

      [root@onyx-28 ~]# lnetctl import /tmp/lnetconfig.yaml 
      yaml:
          - builder:
                errno: -1
                descr: Failed to handle token:2 [state=0, rc=-1]
      [root@onyx-28 ~]# more /tmp/lnetconfig.yaml 
      net:
          - nid: 0@lo
            status: up
            tunables:
                peer_timeout: 0
                peer_credits: 0
                peer_buffer_credits: 0
                credits: 0
                CPTs:  0
          - nid: 10.2.4.74@tcp
            status: up
            interfaces:
                0: eth0
            tunables:
                peer_timeout: 180
                peer_credits: 8
                peer_buffer_credits: 0
                credits: 256
                CPTs:  0
      route:
          - net: o2ib
            gateway: 10.2.4.65@tcp
            hop: 1
            priority: 0
            state: up
      routing:
      [root@onyx-28 ~]# 
      

            ashehata Amir Shehata (Inactive)
            sarah Sarah Liu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: